Fix cart align

--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -65,11 +65,19 @@
     }
   }
 
-  &__shipping-info {
-    padding: spacing(4) 0;
+  &__gift-message {
+    margin-top: 0;
 
     @media ($medium-up) {
-      padding: spacing(16) 0;
+      margin-top: spacing(16);
+    }
+  }
+
+  &__shipping-info {
+    padding-bottom: spacing(4);
+
+    @media ($medium-up) {
+      padding: spacing(8) 0;
     }
   }
 
